--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -1,5 +1,5 @@
 {%extends "foreign/foreign_base.html"%}
-{%block content%}
+{%block contents%}
 <div style="width:750px;">
     <div class="d-flex justify-content-between ">
         <div class="d-flex align-items-center ">
