--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -3,14 +3,12 @@
 {% for key, val in univ_dict.items %}
     <ul>
         <h3>{{ key }}</h3>
-        {% for country in val %}
-        {% for univ in all_univs %}
-        {% if univ.away_name == country %}
+        {% for univ in val %}
+
             <li>
-                <a href="{% url "foreign:wiki" univ.pk%}">{{country}}</a>
+                <a href="{% url "foreign:wiki" univ.pk%}">{{univ.away_name}}</a>
             </li>
-        {%endif%}
-        {% endfor %}
+
         {% endfor %}
     </ul>
     <br>
