--- a/templates/foreign/univ_create.html
+++ b/templates/foreign/univ_create.html
@@ -6,16 +6,15 @@
     <input type="submit" value='검색'>
 </form>
 
-<button class="btn btn-sm btn-border" onclick="location.href='{% url "foreign:univ_create" %}'">학교 추가</button>
 
 {% for key, val in univ_dict.items %}
     <ul>
         <h3>{{ key }}</h3>
         {% for univ in val %}
 
-            <li>
-                <a href="{% url "foreign:wiki" univ.pk%}">{{univ.away_name}}</a>
-            </li>
+      
+               {{univ}}
+        
 
         {% endfor %}
     </ul>
