--- a/templates/foreign/univ_create.html
+++ b/templates/foreign/univ_create.html
@@ -1,23 +1,17 @@
 {%extends "base.html"%}
 {%block content%}
+<div class="container">
+    <div class="col-sm-12">
+        <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <table class="table table-bordered">
+                <div>대학명: {{form.away_name}}</div>
+                <div>국가: {{form.country}}</div>
+                <div>자매 결연 대학:{{form.foreign_sister}}</div>
+            </table>
+            <input type="submit" value="저장하기" class="btn btn-primary" />
+        </form>
+    </div>
+</div>
 
-<form action="" method='GET'>
-    학교명: <input type="search" name='query' >
-    <input type="submit" value='검색'>
-</form>
-
-
-{% for key, val in univ_dict.items %}
-    <ul>
-        <h3>{{ key }}</h3>
-        {% for univ in val %}
-
-      
-               {{univ}}
-        
-
-        {% endfor %}
-    </ul>
-    <br>
-{% endfor %}
 {%endblock%}
