--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -30,7 +30,10 @@
             {% endfor %}
         </table>
         {% if not page_obj %}
-        <p align='center' class="m-4">검색 결과가 없습니다.</p>
+        <div class='text-center m-4'>
+            <h5 style="margin-bottom: 5px;">등록된 정보가 없습니다</h5>
+            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        </div>
         {% endif %}
         <div class="pagination qna-pagination d-flex justify-content-center">
             <div>
