--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -30,8 +30,8 @@
             {% endfor %}
         </table>
         {% if not page_obj %}
-        <div class='text-center m-5'>
-            <h5>등록된 정보가 없습니다</h5>
+        <div class='text-center m-4'>
+            <h5 style="margin-bottom: 5px;">등록된 정보가 없습니다</h5>
             <h6>첫 번째로 정보를 등록해주세요!</h6>
         </div>
         {% endif %}
