--- a/templates/country/country_univ.html
+++ b/templates/country/country_univ.html
@@ -10,20 +10,27 @@
 
   <hr>
 
-    <div>
-        {% for key, val in univ_dict.items %}
-        <ul>
-            <h5>{{ key }}</h5>
-            {% for univ in val %}
+  <div>
+    {% if univ_dict %}
+      {% for key, val in univ_dict.items %}
+      <ul>
+          <h5>{{ key }}</h5>
+          {% for univ in val %}
 
-            
-            <a href="">{{univ.away_name}}</a>
+          
+          <a href="">{{univ.away_name}}</a>
 
-            {% endfor %}
-        </ul>
-        <br>
-        {% endfor %}
-    </div>
+          {% endfor %}
+      </ul>
+      <br>
+      {% endfor %}
+      {% else %}
+      <div class='text-center m-4'>
+          <h5 style="margin-bottom: 5px;">등록된 정보가 없습니다</h5>
+          <h6>첫 번째로 정보를 등록해주세요!</h6>
+      </div>
+  {% endif %}
+  </div>
 </div>
 
 {%endblock%}
