--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -170,8 +170,9 @@
 
     const UpdateHandleResponse = (comment_id,comment_content,nickname)=>{
         const element = document.querySelector(`.comment_${comment_id}`)
+        element.nextElementSibling.remove();     <!--input창 없애기-->
         element.parentNode.innerHTML = `
-        <div class=" d-flex justify-content-between">
+        <div class="comment_${comment_id} d-flex justify-content-between">
             <div>
                 <span class="post-author">${nickname}</span>
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
@@ -266,17 +267,15 @@
             
             //대댓글 수정
     const editReComment = (comment_id, recomment_id, recomment_content) => {
-        const element = document.querySelector(`.comment_${comment_id}`);
-        element.innerHTML = ` 
-            <div class=" d-flex justify-content-between">
-                <div class="d-flex align-items-center">
-                    <span class="post-author">{{request.user.nickname}}</span>
-                    <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
-                </div>
-                <button class="blue-button create-btn s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
-            </div>
-            <input class="edit-comment-input" type="text" id="edit_comment" value='${comment_content}' />
-            `;
+        const element = document.querySelector(`#recomment_${recomment_id}`);
+        element.innerHTML = `
+        <div class="undercomment-container d-flex align-items-center post-reinput-margin">
+            <img src="/static/css/img/undercomment.png" alt="대댓글">
+            <span class="post-author">{{ request.user.nickname }}</span>
+            <input class="new-undercomment-input flex-grow-1 " type="text" id="edit-undercomment" value='${recomment_content}' />
+            <button class="blue-button create-btn s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${recomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
+        </div>
+        `
     }
 
     const onClickEditUnder= async(comment_id, recomment_id, comment_content) => {  
@@ -292,17 +291,16 @@
 
     const underEditHandleResponse = (comment_id, recomment_id, recomment_author, recomment_content) => {
         const element = document.querySelector(`#recomment_${recomment_id}`);
-        const originHTML = element.innerHTML;
         element.innerHTML = `
-        <div>
-            <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
-            <span class="post-author">{{ request.user.nickname }}</span>
-            <span class="comment-content flex-grow-1">${recomment_content}</span>
-        </div>
-        <div>
-            <button class="s-btn light-button update" onclick="editReComment('${comment_id}', '${recomment_id}','${recomment_content}')">수정</button>
-            <button class="s-btn light-button delete post-button" onclick="onClickDeleteUnder('${recomment_id}')">삭제</button>
-        </div>
+            <div>
+                <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+                <span class="post-author">{{ request.user.nickname }}</span>
+                <span class="comment-content flex-grow-1">${recomment_content}</span>
+            </div>
+            <div>
+                <button class="s-btn light-button update" onclick="editReComment('${comment_id}', '${recomment_id}','${recomment_content}')">수정</button>
+                <button class="s-btn light-button delete post-button" onclick="onClickDeleteUnder('${recomment_id}')">삭제</button>
+            </div>
         `
         const editInput = document.querySelector(`.recomment_${comment_id}`);
         editInput.innerHTML = '';
