--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -64,17 +64,28 @@
     {% block extra %}
     <script>
         function numbering(startnum){
-        var init = startnum;
-        var td_list = document.querySelectorAll(`.numbered`);
-        for(var i=0; i<td_list.length; i++){
-            if (i==0){
-                init=init+({{ page_obj.number }}-1)*15;
-            }
-            init++;
-            td_list[i].innerHTML= `${init}`;
-        }
-    }
-    numbering(0);
+            var init = startnum;
+            var td_list = document.querySelectorAll(`.numbered`);
+            for(var i=0; i<td_list.length; i++){
+                if (i==0){
+                    init=init+({{ page_obj.number }}-1)*15;
+                };
+                init++;
+                td_list[i].innerHTML= `${init}`;
+            };
+        };
+        // function numbering(startnum){
+        //     var init = startnum;
+        //     var td_list = document.querySelectorAll(`.numbered`);
+        //     for(var i=0; i<td_list.length; i++){
+        //         if (i==0){
+        //             init=td_list.length+({{ page_obj.number }}-1)*15;
+        //         };
+        //         init--;
+        //         td_list[i].innerHTML= `${init}`;
+        //     };
+        // };
+        numbering(0);
     
         const canIPost= (is_authenticated)=> {
             if (is_authenticated == 'False') {
