--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -73,10 +73,10 @@
                 {% endfor %}
             </div>
             {% if is_authenticated == True %}
-            <form class="new-comment d-flex align-items-center" action="./comment_create/" method="POST">
+            <div class="new-comment d-flex align-items-center">
                 <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{ question.pk }}" placeholder='댓글달기...' style="width: 80%;"/>
-                <span class="blue-button create-btn s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value )">등록</span>
-            </form>
+                <button class="blue-button create-btn s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value )">등록</button>
+            </div>
             {% endif %}
         </div>
     </div>
