--- a/templates/login/myquestion.html
+++ b/templates/login/myquestion.html
@@ -12,14 +12,14 @@
         <div class="d-flex flex-column category-list">
             <h5>국내대학별</h5>
             <hr />
-            {% if page_obj1 %}
+            {% if d_question_list %}
             <table>
                 <tr align='center'>
                     <th width='50'>번호</th>
                     <th width='750' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for question in page_obj1 %}
+                {% for question in d_question_list %}
                 <tr>
                     <td class="numbered1" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'domestic:question_detail' question.home_university.pk question.pk %}">{{ question.question_title }}</a></td>
@@ -41,26 +41,26 @@
             {% endif %}
             <div class="pagination d-flex justify-content-center">
                 <div>
-                    {% if page_obj1.has_previous %}
+                    {% if d_question_list.has_previous %}
                         <a class="abutton" href="?page1={{ bpage_obj.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-left"></i></a>
                     {% endif %}
                 </div>
                 <div class="page-number">
-                    {% for page1 in page_obj1.paginator.page_range %}
-                        {% if page1 >= page_obj1.number|add:-2 and page1 <= page_obj1.number|add:2 %}
-                            <span class="{% if page1 == page_obj1.number %}current{% endif %}">
-                                <a class="numbering" href="?page1={{ page1 }}" {% if page1 == page_obj1.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page1 }}</a>
+                    {% for page1 in d_question_list.paginator.page_range %}
+                        {% if page1 >= d_question_list.number|add:-2 and page1 <= d_question_list.number|add:2 %}
+                            <span class="{% if page1 == d_question_list.number %}current{% endif %}">
+                                <a class="numbering" href="?page1={{ page1 }}" {% if page1 == d_question_list.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page1 }}</a>
                             </span>
-                        {% elif page1 >= page_obj1.number|add:-3 and page1 <= page_obj1.number|add:3 %}
+                        {% elif page1 >= d_question_list.number|add:-3 and page1 <= d_question_list.number|add:3 %}
                             <span>..</span>
                         {% endif %}
                     {% endfor %}
                 </div>
                 <div>
-                    {% if page_obj1.has_next %}
-                        <a class="abutton" href="?page1={{ page_obj1.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
+                    {% if d_question_list.has_next %}
+                        <a class="abutton" href="?page1={{ d_question_list.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-right"></i></a>
                     {% endif %}
@@ -71,14 +71,14 @@
         <div class="d-flex flex-column category-list">
             <h5>해외파견교별</h5>
             <hr />
-            {% if page_obj2 %}
+            {% if f_question_list %}
             <table>
                 <tr align='center'>
                     <th width='50'>번호</th>
                     <th width='750' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for question in page_obj2 %}
+                {% for question in f_question_list %}
                 <tr>
                     <td class="numbered2" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'foreign:question_detail' question.away_university.pk question.pk %}">{{ question.question_title }}</a></td>
@@ -100,26 +100,26 @@
             {% endif %}
             <div class="pagination d-flex justify-content-center">
                 <div>
-                    {% if page_obj2.has_previous %}
+                    {% if f_question_list.has_previous %}
                         <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-left"></i></a>
                     {% endif %}
                 </div>
                 <div class="page-number">
-                    {% for page2 in page_obj2.paginator.page_range %}
-                        {% if page2 >= page_obj2.number|add:-2 and page2 <= page_obj2.number|add:2 %}
-                            <span class="{% if page2 == page_obj2.number %}current{% endif %}">
-                                <a class="numbering" href="?page2={{ page2 }}" {% if page2 == page_obj2.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page2 }}</a>
+                    {% for page2 in f_question_list.paginator.page_range %}
+                        {% if page2 >= f_question_list.number|add:-2 and page2 <= f_question_list.number|add:2 %}
+                            <span class="{% if page2 == f_question_list.number %}current{% endif %}">
+                                <a class="numbering" href="?page2={{ page2 }}" {% if page2 == f_question_list.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page2 }}</a>
                             </span>
-                        {% elif page2 >= page_obj2.number|add:-3 and page2 <= page_obj2.number|add:3 %}
+                        {% elif page2 >= f_question_list.number|add:-3 and page2 <= f_question_list.number|add:3 %}
                             <span>..</span>
                         {% endif %}
                     {% endfor %}
                 </div>
                 <div>
-                    {% if page_obj2.has_next %}
-                        <a class="abutton" href="?page2={{ page_obj2.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
+                    {% if f_question_list.has_next %}
+                        <a class="abutton" href="?page2={{ f_question_list.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-right"></i></a>
                     {% endif %}
@@ -130,14 +130,14 @@
         <div class="d-flex flex-column category-list">
             <h5>파견국가별</h5>
             <hr />
-            {% if page_obj3 %}
+            {% if c_question_list %}
             <table>
                 <tr align='center'>
                     <th width='50'>번호</th>
                     <th width='750' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for question in page_obj3 %}
+                {% for question in c_question_list %}
                 <tr>
                     <td class="numbered3" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'country:question_detail' question.country.pk question.pk %}">{{ question.question_title }}</a></td>
@@ -159,26 +159,26 @@
             {% endif %}
             <div class="pagination d-flex justify-content-center">
                 <div>
-                    {% if page_obj3.has_previous %}
+                    {% if c_question_list.has_previous %}
                         <a class="abutton" href="?page3={{ bpage_obj3.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-left"></i></a>
                     {% endif %}
                 </div>
                 <div class="page-number">
-                    {% for page3 in page_obj3.paginator.page_range %}
-                        {% if page3 >= page_obj3.number|add:-2 and page3 <= page_obj3.number|add:2 %}
-                            <span class="{% if page3 == page_obj3.number %}current{% endif %}">
-                                <a class="numbering" href="?page3={{ page3 }}" {% if page3 == page_obj3.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page3 }}</a>
+                    {% for page3 in c_question_list.paginator.page_range %}
+                        {% if page3 >= c_question_list.number|add:-2 and page3 <= c_question_list.number|add:2 %}
+                            <span class="{% if page3 == c_question_list.number %}current{% endif %}">
+                                <a class="numbering" href="?page3={{ page3 }}" {% if page3 == c_question_list.number %} style="background-color: var(--blue); color: white;" {%endif%}>{{ page3 }}</a>
                             </span>
-                        {% elif page3 >= page_obj3.number|add:-3 and page3 <= page_obj3.number|add:3 %}
+                        {% elif page3 >= c_question_list.number|add:-3 and page3 <= c_question_list.number|add:3 %}
                             <span>..</span>
                         {% endif %}
                     {% endfor %}
                 </div>
                 <div>
-                    {% if page_obj3.has_next %}
-                        <a class="abutton" href="?page3={{ page_obj3.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
+                    {% if c_question_list.has_next %}
+                        <a class="abutton" href="?page3={{ c_question_list.next_page_number }}"><i class="fas fa-chevron-right"></i></a>
                     {% else %}
                         <a class="abutton"><i class="fas fa-chevron-right"></i></a>
                     {% endif %}
@@ -196,7 +196,7 @@
         var td_list1 = document.querySelectorAll(`.numbered1`);
         for(var i=0; i<td_list1.length; i++){
             if (i==0){
-                init1=init1+({{ page_obj1.number }}-1)*15;
+                init1=init1+({{ d_question_list.number }}-1)*15;
             }
             init1++;
             td_list1[i].innerHTML= `${init1}`;
@@ -209,7 +209,7 @@
         var td_list2 = document.querySelectorAll(`.numbered2`);
         for(var j=0; j<td_list2.length; j++){
             if (j==0){
-                init2=init2+({{ page_obj2.number }}-1)*15;
+                init2=init2+({{ f_question_list.number }}-1)*15;
             }
             init2++;
             td_list2[j].innerHTML= `${init2}`;
@@ -222,7 +222,7 @@
         var td_list3 = document.querySelectorAll(`.numbered3`);
         for(var k=0; k<td_list3.length; k++){
             if (k==0){
-                init3=init3+({{ page_obj3.number }}-1)*15;
+                init3=init3+({{ c_question_list.number }}-1)*15;
             }
             init3++;
             td_list3[k].innerHTML= `${init3}`;
