--- a/templates/foreign/wiki.html
+++ b/templates/foreign/wiki.html
@@ -12,7 +12,7 @@
         <div class="wiki__li">
             <div class="wiki__li-title">
                 <h4>1. 파견로의 지원방법</h4>
-                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','apply')">수정</button>
+                <button class="light-button m-btn" onclick="Edit('{{ user.is_authenticated }}','away_apply')">수정</button>
             </div>
             <pre>{{univ.away_apply}}</pre>  <!--textarea에 입력한대로 보여주는 pre tag-->
         </div>
@@ -69,7 +69,7 @@
             window.location.href='{% url "login:login" %}';
         }else{
            
-            var view=`/foreign/wiki/edit_${str}/`           //url 연결
+            var view=`/foreign/wiki/${str}/`           //url 연결
         
             window.location.href=view+'{{univ.pk}}'
 
