--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -11,24 +11,28 @@
     <hr>
     <form action="" method="POST" enctype="multipart/form-data" class="table">
         {% csrf_token %}
-        <div class="d-flex justify-content-between align-items-center wiki__li-title">
         {% for field in form %}
-        {% if btn == forloop.counter%}
-            {%if field.name == 'away_apply'%} <h4>1.파견로의 지원방법</h4>  {%endif%}
-            {%if field.name == 'language_score'%}<h4>2.필요 어학 점수</h4>   {%endif%}
-            {%if field.name == 'course_enroll'%} <h4>3.수강신청방법</h4>  {%endif%}
-            {%if field.name == 'accommodation'%} <h4> 4.기숙사 정보</h4> {%endif%}
-            {%if field.name == 'atmosphere'%} <h4>5.학교 분위기</h4> {%endif%}
-            {%if field.name == 'club'%}  <h4>6.동아리</h4> {%endif%}
-            {%if field.name == 'away_scholarship'%} <h4>7.장학금</h4> {%endif%}
+        {%if type == field.name%}
+        <div class="d-flex justify-content-between align-items-center wiki__li-title">
+            {%if type == 'away_apply'%} <h4>1.파견로의 지원방법</h4>  {%endif%}
+            {%if type == 'language_score'%}<h4>2.필요 어학 점수</h4>   {%endif%}
+            {%if type == 'course_enroll'%} <h4>3.수강신청방법</h4>  {%endif%}
+            {%if type == 'accommodation'%} <h4> 4.기숙사 정보</h4> {%endif%}
+            {%if type == 'atmosphere'%} <h4>5.학교 분위기</h4> {%endif%}
+            {%if type == 'club'%}  <h4>6.동아리</h4> {%endif%}
+            {%if type == 'away_scholarship'%} <h4>7.장학금</h4> {%endif%}
             <input class="blue-button m-btn" type="submit" value="저장하기" onclick="onClickEditWiki()"/>
         </div>
         <div class="form-group">
             <textarea type="{{ field.field.widget.textarea_type }}" class="form-control"
                 id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
         </div>
-        
-        {%endif%}
+        {% else %}
+            <div class="form-group">
+                <textarea type="{{ field.field.widget.textarea_type }}" class="form-control "
+                    id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" readonly style="display:none" cols = "100" rows="20" >{{field.value}}</textarea>
+            </div>
+        {% endif %}
         {% endfor %}
 
     </form>
